--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           toolchain: nightly
           components: rustfmt
+          cache-workspace-crates: true
       - name: Check formatting
         uses: actions-rust-lang/rustfmt@v1
 
@@ -66,6 +67,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: clippy
+          cache-workspace-crates: true
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge build
@@ -89,6 +91,7 @@ jobs:
   #         # https://doc.rust-lang.org/beta/unstable-book/language-features/doc-cfg.html which allows an
   #         # API be documented as only available in some specific platforms.
   #         toolchain: nightly
+  #         cache-workspace-crates: true
   #     - name: Install cargo-docs-rs
   #       uses: dtolnay/install@cargo-docs-rs
   #     - name: Generate documentation
