--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          cache-workspace-crates: true
+          cache-workspaces: "."
       - name: Install cargo-nextest
         uses: taiki-e/install-action@cargo-nextest
       - name: Install Foundry
