--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -47,15 +47,7 @@ jobs:
         run: forge build
       - name: Run malaketh
         run: |
-          cargo build
-          # `make all` equivalent but with --no-wait
-          ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet
-          cargo run --bin malachitebft-eth-app -- testnet --home nodes --testnet-config .testnet/testnet_config.toml --log-level info
-          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin malachitebft-eth-app show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin malachitebft-eth-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
-          docker compose up -d reth0 reth1 reth2 prometheus grafana otterscan
-          ./scripts/add_peers.sh --nodes 3
-          bash scripts/spawn.bash --nodes 3 --home nodes --no-wait
+          NODE_COUNT=3 make start
 
       - name: Upload test logs
         if: failure()
