Different config params and parallel spam

--- a/compose.yaml
+++ b/compose.yaml
@@ -64,10 +64,10 @@ services:
       - "--authrpc.port=18551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
       - "--prune.receipts.distance=10064"
-      - "--prune.accounthistory.distance=10064"
-      - "--prune.storagehistory.distance=10064"
-      - "--prune.transactionlookup.distance=10064"
-      - "--prune.senderrecovery.distance=10064"
+      - "--prune.account-history.distance=10064"
+      - "--prune.storage-history.distance=10064"
+      - "--prune.transaction-lookup.distance=10064"
+      - "--prune.sender-recovery.distance=10064"
       - "--prune.block-interval=5"
       - "--prune.bodies.distance=10064"
       - "--metrics=127.0.0.1:9001"
