--- a/config.example.toml
+++ b/config.example.toml
@@ -1,4 +1,4 @@
-# This is an example configuration for Malaketh. It is meant to be
+# This is an example configuration for Emerald. It is meant to be
 # used as a reference.
 
 # Moniker prefix used when creating the Malachite configuration file
