--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,9 @@ alloy-rpc-types-engine = { version = "0.11.1", features = [ "ssz", "jwt", "serde
 alloy-json-abi         = { version = "0.8.26", default-features = false }
 alloy-dyn-abi          = { version = "0.8.26", default-features = false, features = [ "std" ] }
 
+
+humantime          = "2.2.0"
+humantime-serde    = "1.1.1"
 async-trait        = "0.1.88"
 axum               = "0.7"
 bytes              = { version = "1", default-features = false }
