--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -46,3 +46,4 @@ tokio        = { workspace = true }
 toml         = { workspace = true }
 tracing      = { workspace = true }
 url          = { workspace = true }
+humantime-serde.workspace = true
