enable websocket in reth nodes

--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,9 @@ services:
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=8546"
+      - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=8551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -60,6 +63,9 @@ services:
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=18546"
+      - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=18551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -95,6 +101,9 @@ services:
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=28546"
+      - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=28551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -130,6 +139,9 @@ services:
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=38546"
+      - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=38551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
