--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -48,11 +48,10 @@ jobs:
       - name: Run emerald
         run: |
           cargo build
-          # `make all` equivalent but with --no-wait
           ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet
           cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
           ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
+          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
           docker compose up -d
           ./scripts/add_peers.sh --nodes 3
           bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
