allow protocol definition in spammer (#53)
* allow protocol definition in spammer

* enforce url

* taploooooo

* fix comment

* change requests

* missed in conflict

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -51,6 +51,7 @@ jsonrpsee-core        = { version = "0.25.0" }
 jsonrpsee-http-client = { version = "0.25.0" }
 
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
+url             = { workspace = true }
 
 [dev-dependencies]
 reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
