Added Reth with custom timestamp validation

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ monitoring/data-prometheus/
 assets
 .testnet
 
+# Custom-reth build artifacts
+custom-reth/target/
+custom-reth/Cargo.lock
+
 # Docs and env
 example/docs/
 .env
