--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,10 @@ volumes:
 services:
   reth0:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    build:
+      context: .
+      dockerfile: custom-reth/Dockerfile
+    image: custom-reth:latest
     container_name: reth0
     volumes:
       - reth0:/data
@@ -42,7 +45,10 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth1:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    build:
+      context: .
+      dockerfile: custom-reth/Dockerfile
+    image: custom-reth:latest
     container_name: reth1
     volumes:
       - reth1:/data
@@ -77,7 +83,10 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth2:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    build:
+      context: .
+      dockerfile: custom-reth/Dockerfile
+    image: custom-reth:latest
     container_name: reth2
     volumes:
       - reth2:/data
@@ -112,7 +121,10 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth3:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    build:
+      context: .
+      dockerfile: custom-reth/Dockerfile
+    image: custom-reth:latest
     container_name: reth3
     volumes:
       - reth3:/data
