Added sleep in emerald.yml

--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -59,7 +59,8 @@ jobs:
           cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
           ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
           cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d
+          docker compose up -d reth0 reth1 reth2 prometheus grafana otterscan
+          sleep 5
           ./scripts/add_peers.sh --nodes 3
           bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
 
