feat(reth): Custom timestamp validation (#114)
* Added Reth with custom timestamp validation


* Upadate Cargo.toml reth version

* Added github image

* Added permissions to github actions

* Set logs in reth container to info

* Do not publish image on pull_request

* Added readme in custom-reth

* Change ubuntu image

---------

Co-authored-by: Jasmina Malicevic <jasmina.dustinac@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ assets
 .testnet
 .claude
 
+# Custom-reth build artifacts
+custom-reth/target/
+custom-reth/Cargo.lock
+
 # Docs and env
 example/docs/
 .env
