--- a/compose.yaml
+++ b/compose.yaml
@@ -7,13 +7,14 @@ volumes:
 services:
   reth0:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    image: ghcr.io/informalsystems/custom-reth:latest
     container_name: reth0
     volumes:
       - reth0:/data
       - ./assets:/root/assets/
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
     command:
       - "node"
       - "-vvvvv"
@@ -45,13 +46,14 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth1:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    image: ghcr.io/informalsystems/custom-reth:latest
     container_name: reth1
     volumes:
       - reth1:/data
       - ./assets:/root/assets/
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
     command:
       - "node"
       - "-vvvvv"
@@ -83,13 +85,14 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth2:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    image: ghcr.io/informalsystems/custom-reth:latest
     container_name: reth2
     volumes:
       - reth2:/data
       - ./assets:/root/assets/
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
     command:
       - "node"
       - "-vvvvv"
@@ -121,7 +124,7 @@ services:
       # - "--txpool.queued-max-count=50000" # default=10000
   reth3:
     network_mode: host
-    image: ghcr.io/paradigmxyz/reth:v1.9.2
+    image: ghcr.io/informalsystems/custom-reth:latest
     container_name: reth3
     volumes:
       - reth3:/data
