--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: read
+  packages: read
 
 # If new code is pushed to a PR branch, then cancel in progress workflows for that PR.
 # Ensures that we don't waste CI time, and returns results quicker.
@@ -45,6 +46,12 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge build
         run: forge build
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run emerald
         run: |
           cargo build
@@ -52,7 +59,7 @@ jobs:
           cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
           ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
           cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d
+          docker compose up -d reth0 reth1 reth2 prometheus grafana otterscan
           ./scripts/add_peers.sh --nodes 3
           bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
 
