--- a/compose.yaml
+++ b/compose.yaml
@@ -71,15 +71,15 @@ services:
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=18551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
-      # IF node pruning is to be enabled - uncomment this
-      # - "--prune.receipts.distance=10064"
-      # - "--prune.account-history.distance=10064"
-      # - "--prune.storage-history.distance=10064"
-      # - "--prune.transaction-lookup.distance=10064"
-      # - "--prune.sender-recovery.distance=10064"
-      # - "--prune.block-interval=5"
-      # - "--prune.bodies.distance=10064"
-      # - "--metrics=127.0.0.1:9001"
+      # If node pruning is to be enabled - uncomment this
+      - "--prune.receipts.distance=10064"
+      - "--prune.account-history.distance=10064"
+      - "--prune.storage-history.distance=10064"
+      - "--prune.transaction-lookup.distance=10064"
+      - "--prune.sender-recovery.distance=10064"
+      - "--prune.block-interval=5"
+      - "--prune.bodies.distance=10064"
+      - "--metrics=127.0.0.1:9001"
       - "--discovery.port=41303"
       - "--port=41303"
       - "--nat=extip:127.0.0.1"
