workflow matches main

--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -54,14 +54,15 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run emerald
         run: |
-          cargo build
-          ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet
+          testnet-clean build
+          ./scripts/generate_testnet_config.sh --nodes 4 --testnet-config-dir .testnet
           cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
           ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
           cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d reth0 reth1 reth2 prometheus grafana otterscan
-          ./scripts/add_peers.sh --nodes 3
-          bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
+          docker compose up -d reth0 reth1 reth2 reth3 prometheus grafana otterscan
+          ./scripts/add_peers.sh --nodes 4
+          @echo 👉 Grafana dashboard is available at http://localhost:4000
+          bash scripts/spawn.bash --nodes 4 --home nodes --no-delay
 
       - name: Upload test logs
         if: failure()
