--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -55,13 +55,7 @@ jobs:
       - name: Run emerald
         run: |
           cargo build
-          ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet --fee-recipient 0x0000000000000000000000000000000000000042
-          cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
-          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d reth0 reth1 reth2 prometheus grafana otterscan
-          ./scripts/add_peers.sh --nodes 3
-          bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
+          make testnet-start
 
       - name: Upload test logs
         if: failure()
