Add optional flag to testnet CLIs to set fee_recipient

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,7 @@ malachitebft-config     = { workspace = true }
 malachitebft-app        = { workspace = true }
 
 
+alloy-primitives = { workspace = true }
 humantime-serde = { workspace = true }
 axum = { workspace = true }
 base64 = "0.22"
