--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,9 @@ volumes:
   reth1:
   reth2:
   reth3:
+  reth4:
+  reth5:
+  reth6:
 
 services:
   reth0:
@@ -62,15 +65,15 @@ services:
       - "--datadir=/data/reth/execution-data"
       - "--chain=/root/assets/genesis.json"
       - "--http"
-      - "--http.port=18645"
+      - "--http.port=8745"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--ws"
-      - "--ws.port=18646"
+      - "--ws.port=8746"
       - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
-      - "--authrpc.port=18551"
+      - "--authrpc.port=9551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
       # If node pruning is to be enabled - uncomment this
       # - "--prune.receipts.distance=10064"
@@ -81,8 +84,8 @@ services:
       # - "--prune.block-interval=5"
       # - "--prune.bodies.distance=10064"
       - "--metrics=127.0.0.1:9001"
-      - "--discovery.port=41303"
-      - "--port=41303"
+      - "--discovery.port=32303"
+      - "--port=32303"
       - "--nat=extip:127.0.0.1"
       - "--engine.persistence-threshold=0"
       # - "--builder.gaslimit=3600000000" # default * 100
@@ -110,19 +113,19 @@ services:
       - "--datadir=/data/reth/execution-data"
       - "--chain=/root/assets/genesis.json"
       - "--http"
-      - "--http.port=28645"
+      - "--http.port=8845"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--ws"
-      - "--ws.port=28646"
+      - "--ws.port=8846"
       - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
-      - "--authrpc.port=28551"
+      - "--authrpc.port=10551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
       - "--metrics=127.0.0.1:9002"
-      - "--discovery.port=51303"
-      - "--port=51303"
+      - "--discovery.port=33303"
+      - "--port=33303"
       - "--nat=extip:127.0.0.1"
       - "--engine.persistence-threshold=0"
       # - "--builder.gaslimit=3600000000" # default * 100
@@ -142,6 +145,7 @@ services:
       - ./assets:/root/assets/
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
     command:
       - "node"
       - "-vvvvv"
@@ -149,19 +153,139 @@ services:
       - "--datadir=/data/reth/execution-data"
       - "--chain=/root/assets/genesis.json"
       - "--http"
-      - "--http.port=38645"
+      - "--http.port=8945"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
       - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--ws"
-      - "--ws.port=38646"
+      - "--ws.port=8946"
       - "--ws.addr=0.0.0.0"
       - "--authrpc.addr=0.0.0.0"
-      - "--authrpc.port=38551"
+      - "--authrpc.port=11551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
       - "--metrics=127.0.0.1:9003"
-      - "--discovery.port=61303"
-      - "--port=61303"
+      - "--discovery.port=34303"
+      - "--port=34303"
+      - "--nat=extip:127.0.0.1"
+      - "--engine.persistence-threshold=0"
+      # - "--builder.gaslimit=3600000000" # default * 100
+      # - "--builder.interval=10ms"
+      # - "--builder.deadline=1" # The deadline in seconds for when the payload builder job should resolve
+      # - "--builder.max-tasks=10" # default=3
+      # - "--txpool.gas-limit=300000000" # default * 10
+      # - "--blobpool.pricebump=1"
+      # - "--txpool.pending-max-count=50000" # default=10000
+      # - "--txpool.queued-max-count=50000" # default=10000
+  reth4:
+    network_mode: host
+    image: ghcr.io/informalsystems/custom-reth:latest
+    container_name: reth4
+    volumes:
+      - reth4:/data
+      - ./assets:/root/assets/
+    environment:
+      PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
+    command:
+      - "node"
+      - "-vvvvv"
+      - "-d"
+      - "--datadir=/data/reth/execution-data"
+      - "--chain=/root/assets/genesis.json"
+      - "--http"
+      - "--http.port=9045"
+      - "--http.addr=0.0.0.0"
+      - "--http.corsdomain=*"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=9046"
+      - "--ws.addr=0.0.0.0"
+      - "--authrpc.addr=0.0.0.0"
+      - "--authrpc.port=12551"
+      - "--authrpc.jwtsecret=/root/assets/jwtsecret"
+      - "--metrics=127.0.0.1:9004"
+      - "--discovery.port=35303"
+      - "--port=35303"
+      - "--nat=extip:127.0.0.1"
+      - "--engine.persistence-threshold=0"
+      # - "--builder.gaslimit=3600000000" # default * 100
+      # - "--builder.interval=10ms"
+      # - "--builder.deadline=1" # The deadline in seconds for when the payload builder job should resolve
+      # - "--builder.max-tasks=10" # default=3
+      # - "--txpool.gas-limit=300000000" # default * 10
+      # - "--blobpool.pricebump=1"
+      # - "--txpool.pending-max-count=50000" # default=10000
+      # - "--txpool.queued-max-count=50000" # default=10000
+  reth5:
+    network_mode: host
+    image: ghcr.io/informalsystems/custom-reth:latest
+    container_name: reth5
+    volumes:
+      - reth5:/data
+      - ./assets:/root/assets/
+    environment:
+      PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
+    command:
+      - "node"
+      - "-vvvvv"
+      - "-d"
+      - "--datadir=/data/reth/execution-data"
+      - "--chain=/root/assets/genesis.json"
+      - "--http"
+      - "--http.port=9145"
+      - "--http.addr=0.0.0.0"
+      - "--http.corsdomain=*"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=9146"
+      - "--ws.addr=0.0.0.0"
+      - "--authrpc.addr=0.0.0.0"
+      - "--authrpc.port=13551"
+      - "--authrpc.jwtsecret=/root/assets/jwtsecret"
+      - "--metrics=127.0.0.1:9005"
+      - "--discovery.port=36303"
+      - "--port=36303"
+      - "--nat=extip:127.0.0.1"
+      - "--engine.persistence-threshold=0"
+      # - "--builder.gaslimit=3600000000" # default * 100
+      # - "--builder.interval=10ms"
+      # - "--builder.deadline=1" # The deadline in seconds for when the payload builder job should resolve
+      # - "--builder.max-tasks=10" # default=3
+      # - "--txpool.gas-limit=300000000" # default * 10
+      # - "--blobpool.pricebump=1"
+      # - "--txpool.pending-max-count=50000" # default=10000
+      # - "--txpool.queued-max-count=50000" # default=10000
+  reth6:
+    network_mode: host
+    image: ghcr.io/informalsystems/custom-reth:latest
+    container_name: reth6
+    volumes:
+      - reth6:/data
+      - ./assets:/root/assets/
+    environment:
+      PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+      RUST_LOG: info
+    command:
+      - "node"
+      - "-vvvvv"
+      - "-d"
+      - "--datadir=/data/reth/execution-data"
+      - "--chain=/root/assets/genesis.json"
+      - "--http"
+      - "--http.port=9245"
+      - "--http.addr=0.0.0.0"
+      - "--http.corsdomain=*"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
+      - "--ws"
+      - "--ws.port=9246"
+      - "--ws.addr=0.0.0.0"
+      - "--authrpc.addr=0.0.0.0"
+      - "--authrpc.port=14551"
+      - "--authrpc.jwtsecret=/root/assets/jwtsecret"
+      - "--metrics=127.0.0.1:9006"
+      - "--discovery.port=37303"
+      - "--port=37303"
       - "--nat=extip:127.0.0.1"
       - "--engine.persistence-threshold=0"
       # - "--builder.gaslimit=3600000000" # default * 100
